--- a/.github/workflows/python-tests.yaml
+++ b/.github/workflows/python-tests.yaml
@@ -23,8 +23,23 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install pytest
+          pip install pytest pytest-qt pytest-cov
 
-      - name: Run tests
+      - name: Run tests and save results
         run: |
-          pytest --maxfail=1 --disable-warnings -v
+          mkdir -p test-reports
+          pytest --maxfail=1 --disable-warnings -v --junitxml=test-reports/results.xml
+
+      - name: Upload test results
+        uses: actions/upload-artifact@v3
+        with:
+          name: pytest-results
+          path: test-reports/results.xml
+
+      - name: Display test results in GitHub UI
+        uses: dorny/test-reporter@v2
+        with:
+          name: pytest
+          path: test-reports/results.xml
+          reporter: github-pr-check
+          fail-on-error: true
