--- a/.github/workflows/python-tests.yaml
+++ b/.github/workflows/python-tests.yaml
@@ -23,6 +23,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+          pip install PyQt5   # or PyQt6 / PySide6
           pip install pytest pytest-qt pytest-cov
 
       - name: Run tests and save results
