--- a/.github/workflows/python-tests.yaml
+++ b/.github/workflows/python-tests.yaml
@@ -1,10 +1,10 @@
-name: Run Python Tests
+name: Python Tests
 
 on:
   push:
-    branches: [ main ]
+    branches: ["main"]
   pull_request:
-    branches: [ main ]
+    branches: ["main"]
 
 jobs:
   test:
@@ -12,35 +12,20 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: "3.12"
+          python-version: 3.12
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install PyQt5   # or PyQt6 / PySide6
-          pip install pytest pytest-qt pytest-cov
+          pip install pytest
 
-      - name: Run tests and save results
+      - name: Run tests
         run: |
-          mkdir -p test-reports
-          pytest --maxfail=1 --disable-warnings -v --junitxml=test-reports/results.xml
-
-      - name: Upload test results
-        uses: actions/upload-artifact@v4
-        with:
-          name: pytest-results
-          path: test-reports/results.xml
-
-      - name: Display test results in GitHub UI
-        uses: dorny/test-reporter@v2
-        with:
-          name: pytest
-          path: test-reports/results.xml
-          reporter: github-pr-check
-          fail-on-error: true
+          export PYTHONPATH=src
+          pytest tests/
